--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="https://github.com/MinhAnh312/Kahoot">Download</a>
+                        <a class="nav-link page-scroll" href="https://github.com/MinhAnh312/Kahoot/releases">Download</a>
                     </li>
                 </ul>
             </div> <!-- end of navbar-collapse -->
@@ -68,8 +68,8 @@
                     <div class="text-container">
                         <h1>QUIZ APP <br>FOR <span id="js-rotating">LEARNERS, FRIENDS, TRIVIA ENTHUSIASTS</span></h1>
                         <p class="p-large">Kahoot Clone is a free game-based customized quiz application - on any portable device, for all ages! Download it today!</p>
-                        <a class="btn-solid-lg" href="#your-link"><i class="fab fa-github"></i>Github Repo</a>
-                        <a class="btn-solid-lg" href="#your-link">Download</i></a>
+                        <a class="btn-solid-lg" href="https://github.com/MinhAnh312/Kahoot"><i class="fab fa-github"></i>Github Repo</a>
+                        <a class="btn-solid-lg" href="https://github.com/MinhAnh312/Kahoot/releases">Download</i></a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">© <a href="https://inovatik.com">Kahoot Clone</a></p>
+                    <p class="p-small">© <a href="https://github.com/MinhAnh312/Kahoot/">Kahoot Clone</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
